--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "@types/js-cookie": "^3.0.6",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.9.5"
   }
